fix for text on mobile

--- a/source/styles.css
+++ b/source/styles.css
@@ -58,7 +58,8 @@
   height: 45px;
 }
 
-@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */
+/*
+@media (min-width:320px)  {
   .portfolio-navigation-row  .mdl-navigation {
     text-align: center;
     max-width: 200px;
@@ -66,42 +67,47 @@
   }
 }
 
-@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
+@media (min-width:481px)  {
   .portfolio-navigation-row  .mdl-navigation {
     text-align: center;
     max-width: 300px;
     width: 100%;
   }
 }
-@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+@media (min-width:641px)  {
   .portfolio-navigation-row  .mdl-navigation {
     text-align: center;
     max-width: 400px;
     width: 100%;
   }
 }
-@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
+@media (min-width:961px)  {
   .portfolio-navigation-row  .mdl-navigation {
     text-align: center;
     max-width: 600px;
     width: 100%;
   }
 }
-@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
+@media (min-width:1025px) {
   .portfolio-navigation-row  .mdl-navigation {
     text-align: center;
     max-width: 800px;
     width: 100%;
   }
 }
-@media (min-width:1281px) { /* hi-res laptops and desktops */
+@media (min-width:1281px) {
   .portfolio-navigation-row  .mdl-navigation {
     text-align: center;
     max-width: 1000px;
     width: 100%;
   }
 }
-
+*/
+.portfolio-navigation-row  .mdl-navigation {
+  text-align: center;
+  max-width: 1000px;
+  width: 100%;
+}
 
 
 .portfolio-navigation-row .mdl-navigation__link {
@@ -164,7 +170,8 @@ img.article-image {
 }
 
 
-@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */
+/*
+@media (min-width:320px)  {
   .portfolio-max-width {
     max-width: 200px;
     margin: auto;
@@ -174,7 +181,7 @@ img.article-image {
   }
 }
 
-@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
+@media (min-width:481px)  {
   .portfolio-max-width {
     max-width: 300px;
     margin: auto;
@@ -183,7 +190,7 @@ img.article-image {
     max-width: 300px;
   }
 }
-@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+@media (min-width:641px)  {
   .portfolio-max-width {
     max-width: 400px;
     margin: auto;
@@ -192,7 +199,7 @@ img.article-image {
     max-width: 400px;
   }
 }
-@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
+@media (min-width:961px)  {
   .portfolio-max-width {
     max-width: 600px;
     margin: auto;
@@ -201,7 +208,7 @@ img.article-image {
     max-width: 600px;
   }
 }
-@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
+@media (min-width:1025px) {
   .portfolio-max-width {
     max-width: 800px;
     margin: auto;
@@ -210,7 +217,7 @@ img.article-image {
     max-width: 800px;
   }
 }
-@media (min-width:1281px) { /* hi-res laptops and desktops */
+@media (min-width:1281px) {
   .portfolio-max-width {
     max-width: 1000px;
     margin: auto;
@@ -218,6 +225,14 @@ img.article-image {
   .portfolio-copy {
     max-width: 800px;
   }
+}
+*/
+.portfolio-max-width {
+  max-width: 1000px;
+  margin: auto;
+}
+.portfolio-copy {
+  max-width: 800px;
 }
 
 
@@ -267,6 +282,13 @@ img.article-image {
   /*
   background-size: cover;
   */
+}
+
+
+@media (max-height:800px)  {
+  .mdl-mini-footer {
+    display: none;
+  }
 }
 
 footer {
